--- a/index.html
+++ b/index.html
@@ -287,119 +287,149 @@
         <div id="deleg-modal-body"></div>
       </div>
     </div>
-
-    <!-- CEN -->
-    <section id="cen" class="tab-section">
-      <div class="cen-section section-padding">
-        <h2>Comité Ejecutivo Nacional (CEN)</h2>
-        <div class="cen-group-photo">
-          <img src="img/cen_grupal.jpg" alt="Foto grupal del CEN">
-        </div>
-        <div class="cen-members">
-          <div class="cen-member">
-            <img src="img/director.jpg" alt="Director Nacional">
-            <div>
-              <h3>Director Nacional</h3>
-              <p>Delta 1- Gener Aguilar Aviles</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/subdirector.jpg" alt="Subdirector">
-            <div>
-              <h3>Subdirector</h3>
-              <p>Delta 2- Martin Saucedo Aviles</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/secretario.jpg" alt="Secretario">
-            <div>
-              <h3>Secretario</h3>
-              <p>Delta 3- Carlos Compañ Barrera</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/coordinador.jpg" alt="Coordinador Estatal">
-            <div>
-              <h3>Coordinador Estatal</h3>
-              <p>Delta 5- Roger Alonso Osorio Salazar</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/radiocomunicacion.jpg" alt="Radio Comunicación">
-            <div>
-              <h3>Radio Comunicación</h3>
-              <p>Delta 7- Romualdo Paz Cab</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/capacitacion.jpg" alt="Capacitación">
-            <div>
-              <h3>Capacitación</h3>
-              <p>Delta 9- Jose Emmanuel Aguilar Ceballos</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/comunicacion_social.jpg" alt="Comunicación Social">
-            <div>
-              <h3>Comunicación Social</h3>
-              <p>Delta 10- Esteher Beatriz May Vera</p>
-            </div>
-          </div>
-
-          <!-- División Fénix -->
-          <div class="cen-member">
-            <img src="img/fenix1.jpg" alt="Paramédico Fénix 1">
-            <div>
-              <h3>Paramédico</h3>
-              <p>Fénix 1- Adán Tapia Aguilar</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/fenix2.jpg" alt="Paramédico Fénix 2">
-            <div>
-              <h3>Paramédico</h3>
-              <p>Fénix 2- Jose Guillermo Ake Gamboa</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/fenix3.jpg" alt="Paramédico Fénix 3">
-            <div>
-              <h3>Paramédico</h3>
-              <p>Fénix 3- Misael Alexis Bacelis Balam</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/fenix4.jpg" alt="Paramédico Fénix 4">
-            <div>
-              <h3>Paramédico</h3>
-              <p>Fénix 4- Abraham Martinez</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/fenix5.jpg" alt="Paramédico Fénix 5">
-            <div>
-              <h3>Paramédico</h3>
-              <p>Fénix 5- Sergio Manuel Gamboa Pech</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/fenix6.jpg" alt="Paramédico Fénix 6">
-            <div>
-              <h3>Paramédico</h3>
-              <p>Fénix 6- Silvia Carolina Canul Nah</p>
-            </div>
-          </div>
-          <div class="cen-member">
-            <img src="img/fenix7.jpg" alt="Paramédico Fénix 7">
-            <div>
-              <h3>Paramédico</h3>
-              <p>Fénix 7- Ismael Canul</p>
-            </div>
-          </div>
+<!-- CEN -->
+<section id="cen" class="tab-section">
+  <div class="cen-section section-padding">
+    <h2>Comité Ejecutivo Nacional (CEN)</h2>
+    <div class="cen-group-photo">
+      <img src="img/cen_grupal.jpg" alt="Foto grupal del CEN">
+    </div>
+    <div class="cen-members">
+      <div class="cen-member">
+        <img src="img/director.jpg" alt="Director Nacional">
+        <div>
+          <h3>Director Nacional</h3>
+          <p>Delta 1 - Gener Aguilar Aviles</p>
         </div>
       </div>
-    </section>
 
+      <div class="cen-member">
+        <img src="img/subdirector.jpg" alt="Subdirector">
+        <div>
+          <h3>Subdirector</h3>
+          <p>Delta 2 - Martin Javier Saucedo Aviles</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/secretario.jpg" alt="Secretario">
+        <div>
+          <h3>Secretario</h3>
+          <p>Delta 3 - Carlos Compañ Barrera</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/tesorera.jpg" alt="Tesorera">
+        <div>
+          <h3>Tesorera</h3>
+          <p>Delta 4 - Deny Roxana Beltran Quijano</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/coordinador.jpg" alt="Coordinador Estatal">
+        <div>
+          <h3>Coordinador Estatal</h3>
+          <p>Delta 5 - Roger Alonso Osorio Salazar</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/radiocomunicacion.jpg" alt="Radio Comunicación">
+        <div>
+          <h3>Radio Comunicación</h3>
+          <p>Delta 7 - Romualdo Paz Cab</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/capacitacion.jpg" alt="Capacitación">
+        <div>
+          <h3>Capacitación</h3>
+          <p>Delta 9 - Jose Emmanuel Aguilar Ceballos</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/comunicacion_social.jpg" alt="Comunicación Social">
+        <div>
+          <h3>Comunicación Social</h3>
+          <p>Delta 10 - Angel Chan May</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/logistica.jpg" alt="Logística y Protocolo">
+        <div>
+          <h3>Logística y Protocolo</h3>
+          <p>Delta 11 - Cirino Diaz Martinez</p>
+        </div>
+      </div>
+
+      <div class="cen-member">
+        <img src="img/condor1.jpg" alt="Cóndor 1 - Coordinador Estatal">
+        <div>
+          <h3>Cóndor 1 - Coordinador Estatal</h3>
+          <p>C1 - Oscar Orozco Pimentel</p>
+        </div>
+      </div>
+
+      <!-- División Fénix (se mantienen los paramédicos como estaban) -->
+      <div class="cen-member">
+        <img src="img/fenix1.jpg" alt="Paramédico Fénix 1">
+        <div>
+          <h3>Paramédico</h3>
+          <p>Fénix 1 - Adán Tapia Aguilar</p>
+        </div>
+      </div>
+      <div class="cen-member">
+        <img src="img/fenix2.jpg" alt="Paramédico Fénix 2">
+        <div>
+          <h3>Paramédico</h3>
+          <p>Fénix 2 - Jose Guillermo Ake Gamboa</p>
+        </div>
+      </div>
+      <div class="cen-member">
+        <img src="img/fenix3.jpg" alt="Paramédico Fénix 3">
+        <div>
+          <h3>Paramédico</h3>
+          <p>Fénix 3 - Misael Alexis Bacelis Balam</p>
+        </div>
+      </div>
+      <div class="cen-member">
+        <img src="img/fenix4.jpg" alt="Paramédico Fénix 4">
+        <div>
+          <h3>Paramédico</h3>
+          <p>Fénix 4 - Abraham Martinez</p>
+        </div>
+      </div>
+      <div class="cen-member">
+        <img src="img/fenix5.jpg" alt="Paramédico Fénix 5">
+        <div>
+          <h3>Paramédico</h3>
+          <p>Fénix 5 - Sergio Manuel Gamboa Pech</p>
+        </div>
+      </div>
+      <div class="cen-member">
+        <img src="img/fenix6.jpg" alt="Paramédico Fénix 6">
+        <div>
+          <h3>Paramédico</h3>
+          <p>Fénix 6 - Silvia Carolina Canul Nah</p>
+        </div>
+      </div>
+      <div class="cen-member">
+        <img src="img/fenix7.jpg" alt="Paramédico Fénix 7">
+        <div>
+          <h3>Paramédico</h3>
+          <p>Fénix 7 - Ismael Canul</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+    
     <!-- NOTICIAS -->
     <section id="noticias" class="tab-section">
       <div class="news-section section-padding">
@@ -573,4 +603,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
