--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
       <div class="cen-member">
         <img src="img/director.jpg" alt="Director Nacional">
         <div>
-          <h3>Director Nacional</h3>
-          <p>Delta 1 - Gener Aguilar Aviles</p>
+          <h3>Director</h3>
+          <p>Gener Aguilar Aviles</p>
         </div>
       </div>
 
@@ -307,7 +307,7 @@
         <img src="img/subdirector.jpg" alt="Subdirector">
         <div>
           <h3>Subdirector</h3>
-          <p>Delta 2 - Martin Javier Saucedo Aviles</p>
+          <p>Martin Javier Saucedo Aviles</p>
         </div>
       </div>
 
@@ -315,7 +315,7 @@
         <img src="img/secretario.jpg" alt="Secretario">
         <div>
           <h3>Secretario</h3>
-          <p>Delta 3 - Carlos Compañ Barrera</p>
+          <p>Carlos Compañ Barrera</p>
         </div>
       </div>
 
@@ -323,39 +323,39 @@
         <img src="img/tesorera.jpg" alt="Tesorera">
         <div>
           <h3>Tesorera</h3>
-          <p>Delta 4 - Deny Roxana Beltran Quijano</p>
+          <p>Deny Roxana Beltran Quijano</p>
         </div>
       </div>
 
       <div class="cen-member">
         <img src="img/coordinador.jpg" alt="Coordinador Estatal">
         <div>
-          <h3>Coordinador Estatal</h3>
-          <p>Delta 5 - Roger Alonso Osorio Salazar</p>
+          <h3>Coordinador Operativo</h3>
+          <p>Roger Alonso Osorio Salazar</p>
         </div>
       </div>
 
-      <div class="cen-member">
+      <!-- <div class="cen-member">
         <img src="img/radiocomunicacion.jpg" alt="Radio Comunicación">
         <div>
           <h3>Radio Comunicación</h3>
           <p>Delta 7 - Romualdo Paz Cab</p>
         </div>
-      </div>
+      </div>-->
 
-      <div class="cen-member">
+      <!--<div class="cen-member">
         <img src="img/capacitacion.jpg" alt="Capacitación">
         <div>
           <h3>Capacitación</h3>
           <p>Delta 9 - Jose Emmanuel Aguilar Ceballos</p>
         </div>
-      </div>
+      </div>-->
 
       <div class="cen-member">
         <img src="img/comunicacion_social.jpg" alt="Comunicación Social">
         <div>
           <h3>Comunicación Social</h3>
-          <p>Delta 10 - Angel Chan May</p>
+          <p>Angel Chan May</p>
         </div>
       </div>
 
@@ -367,16 +367,16 @@
         </div>
       </div>
 
-      <div class="cen-member">
+        <!--<div class="cen-member">
         <img src="img/condor1.jpg" alt="Cóndor 1 - Coordinador Estatal">
         <div>
           <h3>Cóndor 1 - Coordinador Estatal</h3>
           <p>C1 - Oscar Orozco Pimentel</p>
         </div>
-      </div>
+      </div>-->
 
       <!-- División Fénix (se mantienen los paramédicos como estaban) -->
-      <div class="cen-member">
+        <!--<div class="cen-member">
         <img src="img/fenix1.jpg" alt="Paramédico Fénix 1">
         <div>
           <h3>Paramédico</h3>
@@ -422,7 +422,7 @@
         <img src="img/fenix7.jpg" alt="Paramédico Fénix 7">
         <div>
           <h3>Paramédico</h3>
-          <p>Fénix 7 - Ismael Canul</p>
+          <p>Fénix 7 - Ismael Canul</p>-->
         </div>
       </div>
     </div>
@@ -605,3 +605,4 @@
 </body>
 
 </html>
+
