Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -370,6 +370,9 @@
       
       
       <h2>Coordinadores estatales</h2>
+      <div class="cen-group-photo">
+      <img src="img/cen_grupal.jpg" alt="Foto grupal del CDN">
+    </div>
 
       <div class="cen-member">
         <img src="img/condor1.jpg" alt="Cóndor 1 - Coordinador Estatal">
@@ -634,6 +637,7 @@
 </body>
 
 </html>
+
 
 
 
