Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
       <div class="cen-member">
         <img src="img/logistica.jpg" alt="Logística y Protocolo">
         <div>
-          <h3>Logística y Protocolo</h3>
-          <p>Cirino Diaz Martinez</p>
+          <h3>Sistemas y tecnologías</h3>
+          <p>Andy J. Sulub Martin</p>
         </div>
       </div>
 
@@ -385,7 +385,7 @@
       <div class="cen-member">
         <img src="img/condor1.jpg" alt="Cóndor 1 - Coordinador Estatal">
         <div>
-          <h3>Cóndor 1 - Coordinador Estatal</h3>
+          <h3>Coordinador Estatal</h3>
           <p>Quintana Roo- Marco Cervantes Martin</p>
         </div>
       </div>
@@ -637,6 +637,7 @@
 </body>
 
 </html>
+
 
 
 
