--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
             <div class="about-gallery" aria-label="Galería de imágenes de la organización">
               <div class="gallery-grid">
                 <button class="gallery-thumb" data-index="0" aria-label="Abrir imagen 1">
-                  <img src="img//CLUNI.jpg" alt="Cluni">
+                  <img src="img/CLUNI.jpg" alt="Cluni">
                 </button>
                 <button class="gallery-thumb" data-index="1" aria-label="Abrir imagen 2">
-                  <img src="img//acta1.jpg" alt="Acta Constitutiva">
+                  <img src="img/acta1.jpg" alt="Acta Constitutiva">
                 </button>
                 <button class="gallery-thumb" data-index="2" aria-label="Abrir imagen 3">
-                  <img src="img//acta8.jpg" alt="Acta Constitutiva">
+                  <img src="img/acta8.jpg" alt="Acta Constitutiva">
                 </button>
                 <button class="gallery-thumb" data-index="3" aria-label="Abrir imagen 4">
-                  <img src="img//patronato1.jpg" alt="Patronato CNE">
+                  <img src="img/patronato1.jpg" alt="Patronato CNE">
                 </button>
                 <button class="gallery-thumb" data-index="4" aria-label="Abrir imagen 5">
-                  <img src="img//patronato20.jpg" alt="Patronato CNE">
+                  <img src="img/patronato20.jpg" alt="Patronato CNE">
                 </button>
               </div>
             </div>
@@ -554,7 +554,7 @@
     <span>¿Emergencia? Atiéndela primero llamando al <strong>911</strong> — atención inmediata las 24 horas.</span>
     <div class="emergency-buttons">
       <a href="tel:911" class="btn-beige banner-btn" aria-label="Llamar emergencia 911">Emergencia 911</a>
-      <a href="tel:800263247" class="btn-black banner-btn" aria-label="Línea directa con CNE 800 CNE 247" style="margin-left:10px;">Línea directa CNE — 800‑CNE‑247</a>
+      <a href="tel:800263247" class="btn-black banner-btn" aria-label="Línea directa con CNE 800 CNE 247" style="margin-left:10px;">Línea directa CNE - 800-CNE-247</a>
     </div>
   </div>
 
@@ -595,7 +595,7 @@
   </footer>
 
   <!-- Modales y overlays -->
-  <div id="emergencia-modal" class="modal" aria-hidden="true" role="dialog">
+  <div id="emergencia-modal" class="modal" aria-hidden="true" role="dialog" style="display:none;">
   <div class="modal-content">
     <button class="modal-close" id="emergencia-modal-close" aria-label="Cerrar">&times;</button>
     <h2>Reportar Emergencia</h2>
@@ -609,7 +609,7 @@
     <p style="margin-top:10px;">Si necesitas asistencia de la Comisión Nacional de Emergencia (CNE), contacta la línea directa:</p>
 
     <div style="margin:12px 0;">
-      <a href="tel:800263247" class="btn-black" aria-label="Llamar línea directa CNE 800 CNE 247">Línea directa CNE — 800‑CNE‑247</a>
+      <a href="tel:800263247" class="btn-black" aria-label="Llamar línea directa CNE 800 CNE 247">Línea directa CNE - 800-CNE-247</a>
     </div>
 
     <p style="margin-top:16px; color:#555;">
@@ -637,7 +637,6 @@
 </body>
 
 </html>
-
 
 
 
