Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
           </div>
 
-          <!-- Galería (derecha) - sustituir src por tus nombres si difieren -->
+          <!-- Galería (derecha) -->
           <div class="about-img-modern fade-in">
             <div class="about-gallery" aria-label="Galería de imágenes de la organización">
               <div class="gallery-grid">
@@ -159,7 +159,6 @@
               </div>
             </div>
 
-            <!-- Lightbox modal de la galería (insertado junto a la galería) -->
             <div id="gallery-modal" class="gallery-modal" aria-hidden="true" role="dialog" aria-label="Visor de imágenes">
               <button class="gallery-close" aria-label="Cerrar galería">&times;</button>
               <button class="gallery-prev" aria-label="Imagen anterior" title="Anterior">‹</button>
@@ -492,7 +491,7 @@
     <span>¿Emergencia? Atiéndela primero llamando al <strong>911</strong> — atención inmediata las 24 horas.</span>
     <div class="emergency-buttons">
       <a href="tel:911" class="btn-beige banner-btn" aria-label="Llamar emergencia 911">Emergencia 911</a>
-      <a href="tel:800263247" class="btn-black banner-btn" aria-label="Línea directa con CNE 800 CNE 247" style="margin-left:10px;">Línea directa CNE - 800-CNE-247</a>
+      <a href="tel:9999906640" class="btn-black banner-btn" aria-label="Línea directa con CNE 999 990 6640" style="margin-left:10px;">Línea directa CNE - 999 990 6640</a>
     </div>
   </div>
 
@@ -522,7 +521,7 @@
           <a href="#"><span>🐦</span></a>
         </div>
         <div class="footer-contact">
-          <p>800-CNE-247</p>
+          <p>999 990 6640</p>
           <a href="mailto:info@cne.mx">info@cne.mx</a>
         </div>
       </div>
@@ -547,7 +546,7 @@
       <p style="margin-top:10px;">Si necesitas asistencia de la Comisión Nacional de Emergencia (CNE), contacta la línea directa:</p>
 
       <div style="margin:12px 0;">
-        <a href="tel:800263247" class="btn-black" aria-label="Llamar línea directa CNE 800 CNE 247">Línea directa CNE - 800-CNE-247</a>
+        <a href="tel:9999906640" class="btn-black" aria-label="Llamar línea directa CNE 999 990 6640">Línea directa CNE - 999 990 6640</a>
       </div>
 
       <p style="margin-top:16px; color:#555;">
