Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <div class="cen-section section-padding">
         <h2>Comité Ejecutivo Nacional (CEN)</h2>
         <div class="cen-group-photo">
-          <img src="img/cen_grupal.jpg" alt="Foto grupal del CEN">
+          <img src="img/censnf.png" alt="Foto grupal del CEN">
         </div>
         <div class="cen-members cen-executive">
           <div class="cen-member">
@@ -561,3 +561,4 @@
 </body>
 
 </html>
+
