Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <img src="img/radiocomunicacion.jpg" alt="Radio Comunicación">
             <div>
               <h3>Radio Comunicación</h3>
-              <p>Delta 7 - Romualdo Paz Cab</p>
+              <p>Cirino Diaz Martinez</p>
             </div>
           </div>
 
@@ -352,9 +352,9 @@
           </div>
 
           <div class="cen-member">
-            <img src="img/logistica.jpg" alt="Logística y Protocolo">
+            <img src="img/logistica.jpg" alt="Sistema y tecnología">
             <div>
-              <h3>Sistemas y tecnologías</h3>
+              <h3>Sistemas y tecnología</h3>
               <p>Andy J. Sulub Martin</p>
             </div>
           </div>
@@ -561,4 +561,5 @@
 </body>
 
 </html>
+
 
