Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         </div>
         <div class="footer-contact">
           <p>999 990 6640</p>
-          <a href="mailto:info@cne.mx">info@cne.mx</a>
+          <a href="mailto:cne.cen07@gmail.com">cne.cen07@gmail.com</a>
         </div>
       </div>
     </div>
@@ -550,7 +550,7 @@
       </div>
 
       <p style="margin-top:16px; color:#555;">
-        También puedes escribir a <a href="mailto:emergencias@cne.mx">emergencias@cne.mx</a> para reportes no urgentes o seguimiento.
+        También puedes escribir a <a href="mailto:cne.cen07@gmail.com">cne.cen07@gmail.com</a> para reportes no urgentes o seguimiento.
       </p>
     </div>
   </div>
@@ -561,5 +561,6 @@
 </body>
 
 </html>
+
 
 
