Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Comisión Nacional de Emergencia (CNE)</title>
+
+  <!-- Favicon rápido (usa la imagen existente en /img) -->
+  <link rel="icon" href="/img/logonegro.jpeg">
+
+  <!-- Fuentes -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:700,600,500,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600&display=swap" rel="stylesheet">
+
+  <!-- Estilos -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -561,6 +568,7 @@
 </body>
 
 </html>
+
 
 
 
