--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <path d="M 50 90 Q 120 30 250 85 Q 260 110 230 140 Q 160 160 65 120 Z" fill="#d7d2c4"/>
               <circle id="peto"        cx="90"  cy="115" r="7" fill="#000" class="deleg-dot" data-deleg="PETO"/>
               <circle id="progreso"    cx="65"  cy="45"  r="7" fill="#000" class="deleg-dot" data-deleg="PROGRESO"/>
-              <circle id="piste"       cx="105" cy="90"  r="7" fill="#000" class="deleg-dot" data-deleg="PISTE"/>
+              <circle id="motul"       cx="105" cy="90"  r="7" fill="#000" class="deleg-dot" data-deleg="PISTE"/>
               <circle id="fcp"         cx="200" cy="130" r="7" fill="#000" class="deleg-dot" data-deleg="FCP"/>
               <circle id="cancun"      cx="220" cy="50"  r="7" fill="#000" class="deleg-dot" data-deleg="CANCUN"/>
               <circle id="bacalar"     cx="220" cy="120" r="7" fill="#000" class="deleg-dot" data-deleg="BACALAR"/>
@@ -261,7 +261,7 @@
             <ul class="deleg-list">
               <li><button class="deleg-link" data-deleg="PETO"><strong>Peto, Yucatán:</strong> Peto</button></li>
               <li><button class="deleg-link" data-deleg="PROGRESO"><strong>Progreso, Yucatán:</strong> Progreso</button></li>
-              <li><button class="deleg-link" data-deleg="PISTE"><strong>Pisté, Yucatán:</strong> Pisté</button></li>
+              <li><button class="deleg-link" data-deleg="MOTUL"><strong>Motul, Yucatán:</strong> Pisté</button></li>
               <li><button class="deleg-link" data-deleg="FCP"><strong>Felipe Carrillo Puerto, Q. Roo:</strong> FCP</button></li>
               <li><button class="deleg-link" data-deleg="CANCUN"><strong>Cancún, Q. Roo:</strong> Cancún</button></li>
               <li><button class="deleg-link" data-deleg="BACALAR"><strong>Bacalar, Q. Roo:</strong> Bacalar</button></li>
@@ -561,3 +561,4 @@
 </body>
 
 </html>
+
