Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
               <circle id="bacalar"     cx="220" cy="120" r="7" fill="#000" class="deleg-dot" data-deleg="BACALAR"/>
               <circle id="cozumel"     cx="250" cy="85"  r="7" fill="#000" class="deleg-dot" data-deleg="COZUMEL"/>
               <circle id="chetumal"    cx="245" cy="135" r="7" fill="#000" class="deleg-dot" data-deleg="CHETUMAL"/>
-              <!--<circle id="merida" cx="85" cy="55" r="7" fill="#000" class="deleg-dot" data-deleg="MERIDA"/>-->
+              <circle id="merida" cx="85" cy="55" r="7" fill="#000" class="deleg-dot" data-deleg="MERIDA"/> 
               <circle id="jmm"         cx="130" cy="125" r="7" fill="#000" class="deleg-dot" data-deleg="JMM"/>
               <circle id="kantunilkin" cx="240" cy="60"  r="7" fill="#000" class="deleg-dot" data-deleg="KANTUNILKIN"/>
               <circle id="riohondo"    cx="265" cy="120" r="7" fill="#000" class="deleg-dot" data-deleg="RIO_HONDO"/>
@@ -457,7 +457,7 @@
                 <option value="Bacalar">Bacalar, Q. Roo</option>
                 <option value="Cozumel">Cozumel, Q. Roo</option>
                 <option value="Chetumal">Chetumal, Q. Roo</option>
-                <!-- <option value="Mérida">Mérida, Yucatán</option> -->
+                <option value="Mérida">Mérida, Yucatán</option>
                 <option value="José María Morelos">José María Morelos, Q. Roo</option>
                 <option value="Kantunilkin">Kantunilkin, Q. Roo</option>
                 <option value="Río Hondo">Río Hondo, Q. Roo</option>
