--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@
               <circle id="bacalar"     cx="220" cy="120" r="7" fill="#000" class="deleg-dot" data-deleg="BACALAR"/>
               <circle id="cozumel"     cx="250" cy="85"  r="7" fill="#000" class="deleg-dot" data-deleg="COZUMEL"/>
               <circle id="chetumal"    cx="245" cy="135" r="7" fill="#000" class="deleg-dot" data-deleg="CHETUMAL"/>
+              <!-- MERIDA - DELEGACIÓN INACTIVA
               <circle id="merida"      cx="85" cy="55" r="7"   fill="#000" class="deleg-dot" data-deleg="MERIDA"/> 
+              -->
               <circle id="jmm"         cx="130" cy="125" r="7" fill="#000" class="deleg-dot" data-deleg="JMM"/>
               <circle id="kantunilkin" cx="240" cy="60"  r="7" fill="#000" class="deleg-dot" data-deleg="KANTUNILKIN"/>
               <circle id="riohondo"    cx="265" cy="120" r="7" fill="#000" class="deleg-dot" data-deleg="RIO_HONDO"/>
@@ -267,7 +269,9 @@
               <li><button class="deleg-link" data-deleg="BACALAR"><strong>Bacalar, Q. Roo:</strong> Bacalar</button></li>
               <li><button class="deleg-link" data-deleg="COZUMEL"><strong>Cozumel, Q. Roo:</strong> Cozumel</button></li>
               <li><button class="deleg-link" data-deleg="CHETUMAL"><strong>Chetumal, Q. Roo:</strong> Chetumal</button></li>
+              <!-- MERIDA - DELEGACIÓN INACTIVA
               <li><button class="deleg-link" data-deleg="MERIDA"><strong>Mérida, Yucatán:</strong> Mérida</button></li>
+              -->
               <li><button class="deleg-link" data-deleg="JMM"><strong>José María Morelos, Q. Roo:</strong> JMM</button></li>
               <li><button class="deleg-link" data-deleg="KANTUNILKIN"><strong>Kantunilkin, Q. Roo:</strong> Kantunilkin</button></li>
               <li><button class="deleg-link" data-deleg="RIO_HONDO"><strong>Río Hondo, Q. Roo:</strong> Río Hondo</button></li>
@@ -457,7 +461,9 @@
                 <option value="Bacalar">Bacalar, Q. Roo</option>
                 <option value="Cozumel">Cozumel, Q. Roo</option>
                 <option value="Chetumal">Chetumal, Q. Roo</option>
+                <!-- MERIDA - DELEGACIÓN INACTIVA
                 <option value="Mérida">Mérida, Yucatán</option>
+                -->
                 <option value="José María Morelos">José María Morelos, Q. Roo</option>
                 <option value="Kantunilkin">Kantunilkin, Q. Roo</option>
                 <option value="Río Hondo">Río Hondo, Q. Roo</option>
@@ -561,6 +567,3 @@
 </body>
 
 </html>
-
-
-
